--- a/pom.xml
+++ b/pom.xml
@@ -145,12 +145,20 @@
 		</dependency>
 		<!-- End common dbcp -->
 		<!-- MySQL database driver -->
-		<dependency>
+		<!--<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.25</version>
-		</dependency>
+		</dependency>-->
 		<!-- End MySQL -->
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.165</version>
+		</dependency>
+
+
 		<!-- Jackson mapper and Google mappper -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
