--- a/pom.xml
+++ b/pom.xml
@@ -144,20 +144,14 @@
 			<version>20030825.183949</version>
 		</dependency>
 		<!-- End common dbcp -->
-		<!-- MySQL database driver -->
-		<!--<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.25</version>
-		</dependency>-->
-		<!-- End MySQL -->
 
+		<!-- H2 dependency -->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<version>1.3.165</version>
 		</dependency>
-
+		<!-- End H2 dependency -->
 
 		<!-- Jackson mapper and Google mappper -->
 		<dependency>
