--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,16 @@
-# Compiled class file
-*.class
+/.DS_Store
+bin/*
+/.classpath
+/.project
+.gradle/*
+build/*
+target/*
+**/.DS_Store
+**/.settings
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-/target/*
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+/out/
